--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
 
     steps:
       - name: Checkout source code
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
 
       - name: Set up Node.js
-      - uses: actions/setup-node@master
+        uses: actions/setup-node@master
         with:
           node-version: 14.x
 
